Add SFFI3 using givens and JITC.